distribution-flux/ingress/deployment-webapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingresscontroller-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingresscontroller-webapp
  template:
    metadata:
      labels:
        app: ingresscontroller-webapp
    spec:
      containers:
        - name: hello-world
          image: tutum/hello-world:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
