distribution-flux/ingress/svc-webapp-minikube.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-webapp
spec:
  selector:
    app: ingress-webapp
  type: NodePort
  ports:
    - port: 80
