distribution-flux/ingress/svc-webapp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-webapp
spec:
  selector:
    app: ingress-webapp
  ports:
    - port: 80
