distribution-flux/ingress/ingress-webapp.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-webapp
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: ingress-webapp
      port:
        number: 80
